Fixed some issue with indestructible list
Fixed chat command /list. Now, there is no automatic removal from the
list of grids that were not found. An error has occurred, if they are
not have time to load on large maps. It is also now possible to remove
or add to the list entity id.

--- a/BeaconSecurity.csproj
+++ b/BeaconSecurity.csproj
@@ -42,6 +42,9 @@
     <Reference Include="SpaceEngineers.Game">
       <HintPath>..\..\..\..\Games\Steam\steamapps\common\SpaceEngineers\Bin64\SpaceEngineers.Game.dll</HintPath>
     </Reference>
+    <Reference Include="SpaceEngineers.ObjectBuilders">
+      <HintPath>..\..\..\..\Games\Steam\steamapps\common\SpaceEngineers\Bin64\SpaceEngineers.ObjectBuilders.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
