--- a/BeaconSecurity.csproj
+++ b/BeaconSecurity.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JimLess</RootNamespace>
     <AssemblyName>BeaconSecurity</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
@@ -29,6 +31,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sandbox.Common">
@@ -95,7 +98,7 @@
   <PropertyGroup>
     <PostBuildEvent>rmdir  /S /Q %25USERPROFILE%25\AppData\Roaming\SpaceEngineers\Mods\$(TargetName)
 xcopy $(ProjectDir)Content\* %25USERPROFILE%25\AppData\Roaming\SpaceEngineers\Mods\$(TargetName)\ /Y /S /EXCLUDE:$(ProjectDir)exclude_files.txt
-xcopy $(ProjectDir)*.cs %25USERPROFILE%25\AppData\Roaming\SpaceEngineers\Mods\$(TargetName)\Data\Scripts\$(ProjectName)\ /Y /S
+xcopy $(ProjectDir)*.cs %25USERPROFILE%25\AppData\Roaming\SpaceEngineers\Mods\$(TargetName)\Data\Scripts\$(ProjectName)\ /Y /S /EXCLUDE:$(ProjectDir)exclude_files.txt
 </PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
